--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 	    <link id = "tab_pic" rel="shortcut icon" href="images/1s.png" />
       <link style="text/css" rel="stylesheet" href="stylesheet.css"/>
-      <title>Bio</title>
+      <title>song tier list</title>
     </head>
     <body oncontextmenu="return false;">
       <div id='select'></div>
